# clarabel-reimplementation

./: Cargo.toml  README.md
src/: main.rs  solve_linear.rs  types.rs
src/algebra/: mod.rs
src/algebra/csc/: core.rs
src/cones/: mod.rs  nonsymmetric_common.rs
src/kktsolvers/: mod.rs
src/kktsolvers/direct/quasidef/: datamaps.rs  directldlkktsolver.rs  kkt_assembly.rs
src/kktsolvers/direct/quasidef/ldlsolvers/: qdldl.rs
