[package]
name = "clarabel-reimplementation"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits     = "0.2"
clarabel = "0.9.0"
itertools = "0.11.0"
thiserror = "1.0.69"
cfg-if = "1.0.0"
serde = "1.0.215"
derive_builder = "0.20.2"
amd = "0.2.2"
enum_dispatch = "0.3.13"

[[bin]]
name = "lp-simple"
path = "src/solve_linear.rs"